# CG_3DProject

src/: .gitignore  .hgignore  CMakeLists.txt
src/common/: shader.cpp
src/playground/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  collisions.h  cube.obj_src  gameData.h  gameUtils.cpp  gameUtils.h  loadStl.h  model.cpp  model.h  modelData.h  modelLoader.h  playground.cpp  playground.h  rock_c_01.stl  tools.h  transform.py  world.h
src/playground/engine/: light.cpp  light.h  loadStl.h  model.cpp  model.h  modelLoader.cpp  modelLoader.h  renderer.cpp  renderer.h  tools.cpp  tools.h  world.cpp  world.h
src/playground/models/: ChocolateShip.obj_src
src/playground/models/Bunny/: src.txt
src/playground/models/Projectile/: projectile.mtl
src/playground/models/Starship/: Falcon_t45_Rescue_ship_flying.mtl  src.txt
src/playground/models/asteroids/asteroid1/: stone.mtl
src/playground/models/asteroids/asteroid2/: asteroid.mtl  src.txt
src/playground/models/asteroids/asteroid3/: Cliff_Rock_One_OBJ.mtl  src.txt
src/playground/models/inp/Rock1/: src.txt
